@@ -47,7 +47,7 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 enum
 {
-	XC_QUIT = -1,
+	XC_QUIT = -777,    // For horrendous reasons this must not be -1. TODO: fix window::m_ExitCode{ -1 } before changing it
 	XC_OPEN_ERROR = 0, // For horrendous reasons this must be 0. TODO: fix all the places like "if (Editor->GetExitCode())" before changing it
 	XC_MODIFIED,
 	XC_NOT_MODIFIED,
