@@ -1,3 +1,15 @@
+drkns 24.05.2020 02:04:04 +0100 - build 5606
+
+1. Уточнение 5599 еще раз.
+
+2. Игнорирование пробелов перед / после far:config и far:about.
+
+3. Пара мелких оптимизаций.
+
+4. Юнит-тесты не очищают буфер обмена.
+
+5. Убран дисклеймер из changelog_eng. Обновляйте его вместе со всем остальным, это не так сложно.
+
 zg 21.05.2020 14:52:59 +0300 - build 5605
 
 1. первый DN_GOTFOCUS приходил не всегда с актуальной информацией.
